Bug 456578 - recipient auto-completion does not work in master git snapshots
Summary: recipient auto-completion does not work in master git snapshots
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: Git (master)
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 393585 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-07-11 08:08 UTC by Robby Engelmann
Modified: 2022-09-11 14:47 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 22.08.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robby Engelmann 2022-07-11 08:08:10 UTC
SUMMARY
recipient auto-completion does not work since 1-2 days

STEPS TO REPRODUCE
1. Write new mail
2. start typing in TO field
3. 

OBSERVED RESULT
no auto-completion results shown

EXPECTED RESULT
auto-completion results shown

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20220709
KDE Plasma Version: 5.25.80
KDE Frameworks Version: 5.97.0
Qt Version: 5.15.5
Kernel Version: 5.18.9-2-default (64-bit)
Graphics Platform: Wayland
Processors: 8 × Intel® Core™ i7-10510U CPU @ 1.80GHz
Memory: 31.0 GiB of RAM
Graphics Processor: Mesa Intel® UHD Graphics
Manufacturer: TUXEDO
Product Name: TUXEDO
System Version: Not Applicable
Comment 1 Robby Engelmann 2022-07-19 06:45:49 UTC
is still valid here in master git snapshots from openSUSE Tumbleweed.
Can anybody confirm this?
Comment 2 Robby Engelmann 2022-07-29 08:21:43 UTC
Any news on this?
Still no auto-completion here with todays snapshots...
Comment 3 Laurent Montel 2022-07-29 11:52:08 UTC
(back from vacations)
Indeed it doesn't work.
I will work on it soon.
Comment 4 Robby Engelmann 2022-07-29 12:03:15 UTC
thanks a lot!
Comment 5 Laurent Montel 2022-07-29 13:13:59 UTC
You use framework master ?
Comment 6 Robby Engelmann 2022-07-29 13:20:45 UTC
Yes, I do.
Comment 7 Laurent Montel 2022-07-29 13:30:08 UTC
For me it's a bug in kcompletion.
I will debug it.
Comment 8 Laurent Montel 2022-08-01 06:50:05 UTC
Git commit 8dbb1ce882023f2c106179b6fcc43980928c5db9 by Laurent Montel.
Committed on 01/08/2022 at 06:49.
Pushed by mlaurent into branch 'release/22.08'.

Fix Bug 456578 recipient auto-completion does not work in master git snapshots
FIXED-IN: 22.08.0

M  +8    -4    src/pimcommonakonadi/addressline/addresslineedit/kmailcompletion.cpp

https://invent.kde.org/pim/pimcommon/commit/8dbb1ce882023f2c106179b6fcc43980928c5db9
Comment 9 Robby Engelmann 2022-08-02 21:03:50 UTC
confirm, is fixed here.
Thanx!
Comment 10 Laurent Montel 2022-09-11 14:47:35 UTC
*** Bug 393585 has been marked as a duplicate of this bug. ***