Fix Bug 456578 recipient auto-completion does not work in master git snapshots

BUG: 456578
FIXED-IN: 22.08.0